--- a/ArkOS4Clone/panel5.dts
+++ b/ArkOS4Clone/panel5.dts
@@ -349,6 +349,9 @@
 			"Headphone Jack", "HPOR";
 		simple-audio-card,hp-det-gpio = <&gpio2 RK_PC6 GPIO_ACTIVE_LOW>;
 
+		pinctrl-names = "default";
+		pinctrl-0 = <&hp_det>;
+		
 		simple-audio-card,codec-hp-det = <1>;
 		simple-audio-card,cpu {
 			sound-dai = <&i2s1_2ch>;
@@ -376,6 +379,7 @@
 		};
 	};
 
+/*
 	vcc18_audio: vcc_audio {
 		compatible = "regulator-fixed";
 		regulator-name = "vcc_audio";
@@ -386,7 +390,7 @@
 	        regulator-always-on;
 	        regulator-boot-on;
 	};
-
+*/
     vcc_host: vcc_host {
         compatible = "regulator-fixed";
         regulator-name = "vcc_host";
@@ -1040,6 +1044,8 @@
 			clock-names = "mclk";
 			pinctrl-names = "default";
 			pinctrl-0 = <&i2s1_2ch_mclk>;
+			spk-ctl-gpios = <&gpio3 RK_PA7 GPIO_ACTIVE_HIGH>;
+			spk-mute-delay-ms = <500>;
 			use-ext-amplifier;
 			hp-volume = <20>;
 			spk-volume = <3>;
@@ -1350,6 +1356,12 @@
 			<3 RK_PB7 RK_FUNC_GPIO &pcfg_pull_up>,
 			<2 RK_PB5 RK_FUNC_GPIO &pcfg_pull_up>,
 			<2 RK_PB6 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
+	headphone {
+    	
+		hp_det: hp-det {
+			rockchip,pins = <2 RK_PC6 RK_FUNC_GPIO &pcfg_pull_up>;
 		};
 	};
 };
